2005-08-09  Not Zed  <NotZed@Ximian.com>

	** See #312715.

	* em-folder-tree.c (emft_drop_folder_rec): removed.
	(emft_drop_folder): call em_folder_utils_copy_folders to perform
	the operation rather than: doing it sync when it shouldn't be, and
	2; copying code redundantly.

	* em-folder-utils.c (em_folder_utils_move_folder): remove this
	redundant api.
	(em_folder_utils_copy_folder): add delete flag.
	(em_folder_utils_copy_folders): export this function.  fix strange
	argument order.

2005-08-10  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Link with all needed libraries. Use -no-undefined
	on Win32. Work around annoying MSYS feature on Win32 when
	installing the schemas: Echo the command to a temporary .bat file
	and run it with cmd.exe...

	* importers/Makefile.am: Use the bootstrap import library for
	libevolution-mail.la on Win32 as libevolution-mail.la hasn't been
	built yet when we come here. Use -no-undefined on Win32. Use
	privsolib instead of privlib. (See ../ChangeLog.)

2005-08-08  Not Zed  <NotZed@Ximian.com>

	** See bug #304938.

	* mail-ops.c (mail_send_message): don't try to dereference the
	transport if we don't have one.

2005-08-04  Not Zed  <NotZed@Ximian.com>

	** See bug #300881.

	* em-account-editor.c (emae_setup_signatures): don't add the
	signature listener if we've already added it.

2005-08-08  Vivek Jain <jvivek@novell.com>
	
	* em-format.c: (emf_multipart_appledouble):
	check part before using it, else dump source

2005-08-05  Not Zed  <NotZed@Ximian.com>

	** See bug #312397.

	* em-format-quote.c (emfq_format_message): if we are rendering an
	attached message, include the headers always and a marker for it.

2005-08-07  Rodney Dawes  <dobey@novell.com>

	* em-folder-browser.c (emfb_search_items):
	* em-folder-tree-model.c (sort_cb, em_folder_tree_model_load_state):
	* em-folder-tree.c (emft_drop_target):
	* em-folder-view.c (emfv_popup_items, emfv_uri_popups):
	* em-utils.c:
	* em-vfolder-editor.c (em_vfolder_editor_new):